# dinoKiller

./: CMakeLists.txt  main.cpp  map.tmx
src/: !map.tmx  LifeBar.h  level.h  map.h  map.tmx  map1.tmx  map2.tmx  map3.tmx  view.h
src/TinyXML/: tinyxml2.cpp  tinyxml2.h
temp/: map2.tmx  map3.tmx
